tests/semantic_cases/invalid/eof_with_arg.ob0
(* INVALID: EOF builtin is called with arguments but expects arity 0 *)
MODULE Main;
VAR x: INTEGER;
BEGIN
  x := EOF(1)
END Main.
